[package]
name = "rust-query"
version = "0.1.0"
authors = ["Merkle Branch <merklebranch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.22"
exitfailure = "0.5.1"
reqwest = { version = "0.11.4", features = ["json"] }
serde = "1.0.126"
serde_derive = "1.0.126"
tokio = { version = "1.8.1", features = ["full"] }